# Edu-PII-Detection

./: .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml
app/: main.py
app/api/models/: responses.py  schemas.py
app/api/routes/: __init__.py  detection.py  health.py  masking.py  pii_router.py
app/core/: config.py
app/frontend/: gradio_ui.py
app/services/: model_service.py
app/tests/: conftest.py  test_pii.py
app/utils/: tracer.py
helm-charts/elk-stack/: elk-setting.md
helm-charts/elk-stack/elasticsearch/: values.yaml
helm-charts/elk-stack/filebeat/: values.yaml
helm-charts/elk-stack/kibana/: values.yaml
helm-charts/elk-stack/logstash/: values.yaml
helm-charts/ingress-nginx/: ingress-nginx-setting.md
helm-charts/jaeger/: jaeger-setting.md  values.yaml
helm-charts/kube-prometheus-stack/: Chart.yaml  prometheus-setting.md  values.yaml
helm-charts/kube-prometheus-stack/charts/grafana/: Chart.yaml
helm-charts/pii/: Chart.yaml  values.yaml
helm-charts/pii/templates/: deployment.yaml  ingress.yaml  service.yaml  servicemonitor.yaml
scripts/: elk.sh  ingress-nginx.sh  jaeger.sh  jenkins-startup.sh  jenskin-startup.sh  prometheus.sh
terraform/: main.tf  outputs.tf  variables.tf  versions.tf
