[project]
name = "edu-pii-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "gradio>=5.47.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
    "pydantic-settings>=2.10.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.15.0",
    "opentelemetry-exporter-prometheus>=0.57b0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-requests>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
]
